src/syntax_analysis/snapshots/rust_monkey_interpreter__syntax_analysis__tests__test_syntax_analysis_for_infix_expression_case9.snap
---
source: src/syntax_analysis/tests.rs
expression: returned_abstract_syntax_tree
---
{
  "program": [
    {
      "EXPRESSION_STATEMENT": {
        "initial_expression_token": {
          "token_type": "INTEGER",
          "literal": "10"
        },
        "expression": {
          "INFIX": {
            "left_hand_expression": {
              "INFIX": {
                "left_hand_expression": {
                  "INTEGER": {
                    "integer_token": {
                      "token_type": "INTEGER",
                      "literal": "10"
                    }
                  }
                },
                "operator_token": {
                  "token_type": "LESSER_THAN",
                  "literal": "<"
                },
                "right_hand_expression": {
                  "INTEGER": {
                    "integer_token": {
                      "token_type": "INTEGER",
                      "literal": "5"
                    }
                  }
                }
              }
            },
            "operator_token": {
              "token_type": "NOT_EQUALS",
              "literal": "!="
            },
            "right_hand_expression": {
              "BOOLEAN": {
                "boolean_token": {
                  "token_type": "FALSE",
                  "literal": "false"
                }
              }
            }
          }
        }
      }
    }
  ],
  "syntax_parsing_errors": []
}
