src/syntax_analysis/snapshots/rust_monkey_interpreter__syntax_analysis__tests__test_syntax_analysis_for_integer_expression_case1.snap
---
source: src/syntax_analysis/tests.rs
expression: returned_abstract_syntax_tree
---
{
  "program": [
    {
      "EXPRESSION_STATEMENT": {
        "initial_expression_token": {
          "token_type": "INTEGER",
          "literal": "5"
        },
        "expression": {
          "INTEGER": {
            "integer_token": {
              "token_type": "INTEGER",
              "literal": "5"
            }
          }
        }
      }
    }
  ],
  "syntax_parsing_errors": []
}
