src/syntax_analysis/snapshots/rust_monkey_interpreter__syntax_analysis__tests__test_syntax_analysis_for_let_statements_syntax_errors_case1.snap
---
source: src/syntax_analysis/tests.rs
expression: returned_abstract_syntax_tree
---
{
  "program": [],
  "syntax_parsing_errors": [
    "Syntax error : Expected a ASSIGN."
  ]
}
