src/syntax_analysis/snapshots/rust_monkey_interpreter__syntax_analysis__tests__test_syntax_analysis_for_prefix_expression_case1.snap
---
source: src/syntax_analysis/tests.rs
expression: returned_abstract_syntax_tree
---
{
  "program": [
    {
      "EXPRESSION_STATEMENT": {
        "initial_expression_token": {
          "token_type": "NOT",
          "literal": "!"
        },
        "expression": {
          "PREFIX": {
            "prefix_token": {
              "token_type": "NOT",
              "literal": "!"
            },
            "right_hand_expression": {
              "INTEGER": {
                "integer_token": {
                  "token_type": "INTEGER",
                  "literal": "15"
                }
              }
            }
          }
        }
      }
    }
  ],
  "syntax_parsing_errors": []
}
